# doodles

./: .gitignore  .uribo  README.md
.github/workflows/: deploy.yml
genreadme/: Cargo.toml  README.md
genreadme/src/: main.rs
gensite/: Cargo.toml  README.md
gensite/src/: image.html  main.rs
src/draft/: README.md
src/sketch/: README.md
viewer/: index.html  pixcil.js  pixcil.wasm  sw.js
