[package]
name = "gensite"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = { version = "0.18", default-features = false }
orfail = "0.1.3"
pixcil = "0.5"
png = "0.17.11"
time = { version = "0.3", features = ["formatting"] }
